fix: nav dropdown being cut off on page refresh

--- a/app/_components/header/index.module.css
+++ b/app/_components/header/index.module.css
@@ -79,7 +79,7 @@
 }
 
 .hidden {
-  display: none !important;
+  visibility: hidden;
 }
 
 .icons {
